some erroneous file extensions fixed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Jonathon Bohr
-subtitle: Jonathon Bohr - Github Page
+title: Jonathon Bohr fans on Github
+subtitle: Jonathon Bohr - Semi-Official Github Page
 use-site-title: true
 ---
 
